--- a/views/facebook/profile.ejs
+++ b/views/facebook/profile.ejs
@@ -18,7 +18,7 @@
   <nav class="light-blue lighten-1" role="navigation">
     <div class="nav-wrapper container">
       <a id="logo-container" href="#" class="brand-logo">Node Authentication</a>
-      <a href="/logout" class="right">Logout</a>
+      <a href="/facebook/logout" class="right">Logout</a>
     </div>
   </nav>
   <div class="section no-pad-bot" id="index-banner">
